recursion.cons.lessons.recursion.cons.Length.scala.error
length:2: error: not found: value list
  if(list==Nil){
     ^